added resilience for EMA restarts