@@ -110,16 +110,16 @@ public class ScanManager {
                                 brokerScanType, e.getKey()))
                         .filter(Objects::nonNull)
                         .filter(list -> !list.isEmpty())
-                        .toList().stream()
+                        .collect(Collectors.toList()).stream()
                 )
-                .toList().stream().flatMap(List::stream).toList();
+                .collect(Collectors.toList()).stream().flatMap(List::stream).collect(Collectors.toList());
 
         return scanService.singleScan(routes, groupId, scanId, traceId, actorId, messagingServiceEntity, runtimeAgentId);
     }
 
-    public void handleError(Exception e, ScanCommandMessage message){
+    public void handleError(Exception e, ScanCommandMessage message) {
 
-        if( scanStatusPublisherOpt.isEmpty()){
+        if (scanStatusPublisherOpt.isEmpty()) {
             return;
         }
         ScanStatusPublisher scanStatusPublisher = scanStatusPublisherOpt.get();
@@ -140,7 +140,7 @@ public class ScanManager {
                 "orgId", orgId,
                 "runtimeAgentId", runtimeAgentId
         );
-        scanStatusPublisher.sendOverallScanStatus(response,topicVars);
+        scanStatusPublisher.sendOverallScanStatus(response, topicVars);
     }
 
     private MessagingServiceEntity retrieveMessagingServiceEntity(String messagingServiceId) {
@@ -157,5 +157,10 @@ public class ScanManager {
 
     public Page<ScanItemBO> findByMessagingServiceId(String messagingServiceId, Pageable pageable) {
         return scanService.findByMessagingServiceId(messagingServiceId, pageable);
+    }
+
+
+    public boolean isScanComplete(String scanId) {
+        return  scanService.isScanComplete(scanId);
     }
 }
